Added texture edit capabilities

--- a/XPSRenominator/MainWindow.xaml
+++ b/XPSRenominator/MainWindow.xaml
@@ -151,6 +151,12 @@
                                 </Grid>
                             </ScrollViewer>
                         </TabItem>
+                        <TabItem Header="Textures">
+                            <ScrollViewer>
+                                <StackPanel Orientation="Vertical" x:Name="TexturesPanel">
+                                </StackPanel>
+                            </ScrollViewer>
+                        </TabItem>
                     </TabControl>
                 </Grid>
             </TabItem>
