--- a/XPSRenominator/Views/MainWindow.xaml
+++ b/XPSRenominator/Views/MainWindow.xaml
@@ -49,17 +49,17 @@
                 <MenuItem Header="What is BoneDict?" Click="BoneDictExplanation"/>
             </MenuItem-->
             <Border Grid.Row="1" Margin="5">
-                <Button Click="LoadMeshFile">Load .mesh.ascii</Button>
+                <Button Click="LoadMeshFileDialog">Load .mesh.ascii</Button>
             </Border>
             <Border Grid.Row="4" Margin="5" BorderBrush="Green">
-                <Button Click="SaveMesh">Save .mesh.ascii</Button>
+                <Button Click="SaveMeshFileDialog">Save .mesh.ascii</Button>
             </Border>
             <Rectangle Fill="LightGray" Width="1" ></Rectangle>
             <Border Grid.Row="2" Margin="5">
-                <Button Click="LoadBonesFile">Load BoneDict</Button>
+                <Button Click="LoadBonesFileDialog">Load BoneDict</Button>
             </Border>
             <Border Grid.Row="3" Margin="5" BorderBrush="Green">
-                <Button Click="SaveBones">Save BoneDict</Button>
+                <Button Click="SaveBonesFileDialog">Save BoneDict</Button>
             </Border>
             <Rectangle Fill="LightGray" Width="1" ></Rectangle>
             <Border Grid.Row="5" Margin="5" BorderBrush="Red">
