--- a/XPSRenominator/Views/MainWindow.xaml
+++ b/XPSRenominator/Views/MainWindow.xaml
@@ -3,9 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="clr-namespace:XPSRenominator.Controls"
         mc:Ignorable="d"
         Drop="Window_Drop" AllowDrop="True"
-        Title="XPS Renominator 2.0" Height="600" Width="750">
+        Title="XPS Renominator 2.1" Height="600" Width="750">
     <Window.Resources>
         <Style TargetType="Border">
             <Setter Property="BorderBrush" Value="Blue"/>
@@ -162,9 +163,21 @@
                 </Grid>
             </TabItem>
             <TabItem Header="Reparent">
-                <Grid>
-                    <TreeView x:Name="boneTree" MouseMove="BoneTree_MouseMove" SelectedItemChanged="BoneTree_SelectedItemChanged">
-                    </TreeView>
+                <Grid VerticalAlignment="Stretch">
+                    <ScrollViewer x:Name="boneTreeScroll">
+                        <controls:MultiSelectTreeView x:Name="boneTree" MouseMove="BoneTree_MouseMove" SelectedItemsChanged="BoneTree_SelectedItemsChanged" AllowDrop="False" PreviewMouseWheel="BoneTree_PreviewMouseWheel">
+                            <controls:MultiSelectTreeView.CommandBindings>
+                                <CommandBinding Command="Cut" CanExecute="CutCommand_CanExecute" Executed="CutCommand_Executed"></CommandBinding>
+                                <CommandBinding Command="Paste" CanExecute="PasteCommand_CanExecute" Executed="PasteCommand_Executed"></CommandBinding>
+                            </controls:MultiSelectTreeView.CommandBindings>
+                            <controls:MultiSelectTreeView.ContextMenu>
+                                <ContextMenu>
+                                    <MenuItem Header="Cut" Command="Cut"></MenuItem>
+                                    <MenuItem Header="Paste" Command="Paste"></MenuItem>
+                                </ContextMenu>
+                            </controls:MultiSelectTreeView.ContextMenu>
+                        </controls:MultiSelectTreeView>
+                    </ScrollViewer>
                     <StackPanel VerticalAlignment="Top" HorizontalAlignment="Right" Margin="25, 5">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock Width="50" Margin="2" TextAlignment="Center">X</TextBlock>
