--- a/XPSRenominator/Views/MainWindow.xaml
+++ b/XPSRenominator/Views/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:controls="clr-namespace:XPSRenominator.Controls"
         mc:Ignorable="d"
         Drop="Window_Drop" AllowDrop="True"
-        Title="XPS Renominator 2.1" Height="600" Width="750">
+        Title="XPS Renominator 2.2" Height="600" Width="750">
     <Window.Resources>
         <Style TargetType="Border">
             <Setter Property="BorderBrush" Value="Blue"/>
@@ -167,13 +167,18 @@
                     <ScrollViewer x:Name="boneTreeScroll">
                         <controls:MultiSelectTreeView x:Name="boneTree" MouseMove="BoneTree_MouseMove" SelectedItemsChanged="BoneTree_SelectedItemsChanged" AllowDrop="False" PreviewMouseWheel="BoneTree_PreviewMouseWheel">
                             <controls:MultiSelectTreeView.CommandBindings>
-                                <CommandBinding Command="Cut" CanExecute="CutCommand_CanExecute" Executed="CutCommand_Executed"></CommandBinding>
-                                <CommandBinding Command="Paste" CanExecute="PasteCommand_CanExecute" Executed="PasteCommand_Executed"></CommandBinding>
+                                <CommandBinding Command="Cut" CanExecute="CutBoneCommand_CanExecute" Executed="CutBoneCommand_Executed"></CommandBinding>
+                                <CommandBinding Command="Paste" CanExecute="PasteBoneCommand_CanExecute" Executed="PasteBoneCommand_Executed"></CommandBinding>
+                                <CommandBinding Command="New" CanExecute="NewBoneCommand_CanExecute" Executed="NewBoneCommand_Executed"></CommandBinding>
+                                <CommandBinding Command="Replace" CanExecute="MakeRootBoneCommand_CanExecute" Executed="MakeRootBoneCommand_Executed"></CommandBinding>
                             </controls:MultiSelectTreeView.CommandBindings>
                             <controls:MultiSelectTreeView.ContextMenu>
                                 <ContextMenu>
                                     <MenuItem Header="Cut" Command="Cut"></MenuItem>
                                     <MenuItem Header="Paste" Command="Paste"></MenuItem>
+                                    <Separator></Separator>
+                                    <MenuItem Header="Make Root" Command="Replace"></MenuItem>
+                                    <MenuItem Header="Add Bone" Command="New"></MenuItem>
                                 </ContextMenu>
                             </controls:MultiSelectTreeView.ContextMenu>
                         </controls:MultiSelectTreeView>
@@ -189,13 +194,6 @@
                             <TextBox x:Name="selectedBoneYPosition" Width="50" Margin="2"></TextBox>
                             <TextBox x:Name="selectedBoneZPosition" Width="50" Margin="2"></TextBox>
                         </StackPanel>
-
-                        <Border Grid.Row="5" Margin="5" BorderBrush="LightGreen">
-                            <Button Click="AddBone">Add Bone</Button>
-                        </Border>
-                        <Border Grid.Row="5" Margin="5" BorderBrush="Red">
-                            <Button Click="MakeRoot">Make Root</Button>
-                        </Border>
                     </StackPanel>
                 </Grid>
             </TabItem>
